--- a/Operadoreslogicosrelacionais/Atividade_OperadoresLogicosAritmeticosRelacionais.ipynb
+++ b/Operadoreslogicosrelacionais/Atividade_OperadoresLogicosAritmeticosRelacionais.ipynb
@@ -294,6 +294,34 @@
     {
       "cell_type": "code",
       "source": [
+        "#entrada\n",
+        "nome= (input(\"Digite seu nome: \"))\n",
+        "\n",
+        "#saida\n",
+        "print(\"seja muito bem vindo(a)\",n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M7mw5CChSWR5",
+        "outputId": "b87193cb-3524-487f-bf6f-b2e2b9a78410"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite seu nome: Katarina\n",
+            "seja muito bem vindo(a) katarina\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# EXERCÍCIO 02 - Sua resposta aqui..."
       ],
       "metadata": {
@@ -301,6 +329,46 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#entrada\n",
+        "a = float(input(\"Digite o primeiro número: \"))\n",
+        "b = float(input(\"Digite um segundo número: \"))\n",
+        "#processamento\n",
+        "soma = a + b\n",
+        "subtracao = a - b\n",
+        "divisao = a / b\n",
+        "multiplicacao = a * b\n",
+        "#saida\n",
+        "print(\"soma: \",soma)\n",
+        "print(\"subtração: \",subtracao)\n",
+        "print(\"divisão: \",divisao)\n",
+        "print(\"multiplicação: \",multiplicacao)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w4bAcCcRToHq",
+        "outputId": "74bf59b5-377f-4d91-8d9a-e5e4fea0cad2"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o primeiro número: 5\n",
+            "Digite um segundo número: 3\n",
+            "soma:  8.0\n",
+            "subtração:  2.0\n",
+            "divisão:  1.6666666666666667\n",
+            "multiplicação:  15.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -316,6 +384,41 @@
     {
       "cell_type": "code",
       "source": [
+        "#entrada\n",
+        "n= (input(\"Digite seu nome: \"))\n",
+        "dn= int(input(\"Digite seu ano de nascimento: \"))\n",
+        "aa= int(input(\"Digite o ano atual: \"))\n",
+        "#Processamento\n",
+        "r = (aa-dn)\n",
+        "\n",
+        "#saida\n",
+        "print(f\"Você tem {r} anos\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VWvr2EcOVDCo",
+        "outputId": "03dbad5c-50c7-4614-8bd3-5a35d0d6c57d"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite seu nome: katarina\n",
+            "Digite seu ano de nascimento: 2008\n",
+            "Digite o ano atual: 2024\n",
+            "Você tem 16 anos\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# EXERCÍCIO 04 - Sua resposta aqui..."
       ],
       "metadata": {
@@ -323,6 +426,38 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#entrada\n",
+        "qd= float(input(\"Quantos reais você tem: \"))\n",
+        "#processamento\n",
+        "lc= (qd/5)\n",
+        "r=(lc*20)\n",
+        "#saida\n",
+        "print(\"Você pode comprar \", lc, \"litros\")\n",
+        "print(\"Você pode andar \", r,\"km\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yXBW9BK7fDtf",
+        "outputId": "caaaba5f-53a7-4a03-d23e-3b29865a8395"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Quantos reais você tem: 30\n",
+            "Você pode comprar  6.0 litros\n",
+            "Você pode andar  120.0 km\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -338,6 +473,48 @@
     {
       "cell_type": "code",
       "source": [
+        "v1 = 15\n",
+        "v2 = 10\n",
+        "v3 = 5\n",
+        "v4 = 0\n",
+        "\n",
+        "a= (v1 == 10) and (v2 == 10)\n",
+        "b= (v1 == 15) and (v2 == 10)\n",
+        "c= (v4 == 1) or (v3 == 4)\n",
+        "d= (v1 > 10 and v2 < 15) and (v3 < 10 and v4 == 0)\n",
+        "e =(v1 < 10 and v2 > 15) or (v3 > 5 or v4 == 0)\n",
+        "\n",
+        "print(\"a é:\",a)\n",
+        "print(\"b é:\",b)\n",
+        "print(\"c é:\",c)\n",
+        "print(\"d é:\",d)\n",
+        "print(\"e é:\",e)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T5mO_bTrh8Ug",
+        "outputId": "a94b92b7-cb15-4a3b-d170-0ce5441f0a1a"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a é: False\n",
+            "b é: True\n",
+            "c é: False\n",
+            "d é: True\n",
+            "e é: True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# EXERCÍCIO 06 - Sua resposta aqui..."
       ],
       "metadata": {
@@ -345,6 +522,40 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#entrada\n",
+        "qdd= int(input(\"Digite a quantidade de dias: \"))\n",
+        "\n",
+        "#processamento\n",
+        "anos= qdd//365\n",
+        "sobra=qdd%365\n",
+        "meses= sobra//30\n",
+        "dias= sobra%30\n",
+        "\n",
+        "#saida\n",
+        "print (f\"{anos},anos, {meses} meses,{dias} dias\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uXlJLf4dkg8_",
+        "outputId": "e33cdaa1-2912-46fc-a475-e251d327d6d4"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a quantidade de dias: 400\n",
+            "1,anos, 1 meses,5 dias\n"
+          ]
+        }
+      ]
     }
   ]
 }
